agregando imagen del logo

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <header class="flex w-full fixed top-0 z-1">
       <nav class="flex justify-content-between w-full navbar">
         <span class="logo cursor-pointer">
-          <img src="./asets/foto de perfil.jpg" alt="logo portafolio" />
+          <img src="./asets/Logo Erick Noguera.png" alt="logo portafolio" />
         </span>
       </nav>
     </header>
