trabajando en la seccion mis servicios

--- a/index.html
+++ b/index.html
@@ -121,17 +121,38 @@
   <!--LLAMADA A LA ACCION-->
   <section class="llamada mb-4 min-w-full flex flex-column justify-content-center align-items-center">
     <p class="text-sm">Necesitas un Buen Elemento en tu Equipo?</p>
-    <h1 class="text-center">Estoy disponible ya mismo</h1>
+    <h1 class="text-center pt-2 pb-2">Estoy disponible ya mismo</h1>
     <div class="hireMe_button pt-4">
-          <a href="mailTo:erick.noguera0410@gmail.com" aria-label="Enviar mensaje al correo"
-            class="cursor-pointer no-underline border-round-lg">Escribeme</a>
-        </div>
+      <a href="mailTo:erick.noguera0410@gmail.com" aria-label="Enviar mensaje al correo"
+        class="cursor-pointer no-underline border-round-lg">Escribeme</a>
+    </div>
   </section>
   <!--SERVICES-->
-  <section id="services"></section>
+  <div class="container">
+    <section id="services" class="services min-h-full pb-7">
+      <div class="services_tittle flex flex-column gap-3 text-center">
+        <h1 class="text-5xl ">Mis Servicios</h1>
+        <p class="text-gray-400 text-sm md:text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam
+          illum quae labore ab veniam, laudantium asperiores maxime esse, autem nisi natus reprehenderit fugit
+          aspernatur corporis dolorum velit. Magni, eveniet voluptatum.</p>
+      </div>
+      <div class="services_card w-full grid grid-nogutter mt-7 gap-5">
+        <div class="card flex align-items-center col-12 sm:col-6 lg:col-4">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-brands fa-aws"></i>
+          </div>
+          <div class="service_name">
+            <p>AWS</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-  <!--PORTFOLIO-->
-  <section id="portfolio"></section>
+    <!--PORTFOLIO-->
+    <section id="portfolio"></section>
+    <!--FOOTER-->
+    <section id="contact"></section>
+  </div>
 </body>
 <script></script>
 
