seccion de mis servicios terminada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="https://unpkg.com/primeflex@latest/primeflex.css">
   <link rel="stylesheet" href="https://unpkg.com/primeflex/themes/primeone-light.css">
-  <script src="https://kit.fontawesome.com/b3f171dac.js" crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/6f90d2228a.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -71,19 +71,14 @@
     <section id="about" class="about_me w-full min-h-screen flex align-items-center">
       <div class="aboutme_content min-h-full flex flex-column md:flex-row pt-8 md:pt-0"></div>
       <div class="aboutMe_info col-12 md:col-6 md:pr-6 pt-0">
-        <h1 class="text-3xl md:text-5xl">Sobre Mi</h1>
-        <p class="text-gray-500">Backend Developer y Cloud Practitioner AWS con experiencia en ventas, lo que me ha
-          proporcionado habilidades en escucha activa y persuasión. Me estoy certificando como AWS Cloud Practitioner y
-          he adquirido conocimientos en tecnologías como Linux, infraestructura como código y Docker. Especializado en
-          desarrollo Backend, con experiencia en metodologías ágiles (Scrum), Git, estructuras de datos, algoritmos y
-          frameworks CSS (Bootstrap). Manejo tecnologías clave como Express, GitHub y tengo experiencia en desarrollo de
-          aplicaciones Backend y Frontend.
-
-          Poseo experiencia con tecnologías Backend y Frontend como Node.js, TypeScript y React, además de bases de
-          datos SQL y NoSQL, incluyendo MongoDB, PostgreSQL y Mongoose. Cuento con habilidades para el trabajo en
-          equipo, resolución de problemas, comunicación efectiva y organización. Me apasiona la tecnología y resolver
-          problemas. Estudié en Generación Chile y participé en proyectos reales como "Sí, Voy", una empresa de viajes
-          inclusivos en Argentina.</p>
+        <h1 class="text-3xl md:text-5xl pb-1">Sobre Mi</h1>
+        <p class="text-gray-500">Soy Erick Noguera, desarrollador especializado en Backend y en formación como AWS Cloud Practitioner. Me apasiona la tecnología, resolver problemas complejos con código y construir soluciones escalables.
+Además de mi formación técnica, cuento con experiencia en ventas, lo que ha fortalecido mis habilidades de comunicación, organización y trabajo en equipo.
+<br><br>
+Disfruto trabajar en entornos colaborativos y con metodologías ágiles como Scrum. Manejo tecnologías como Node.js, TypeScript, Express, React, MongoDB, PostgreSQL, Docker y Linux.
+Estudié en Generation Chile, donde participé en proyectos reales como “Sí, Voy”, una iniciativa de viajes inclusivos en Argentina.
+<br><br>
+Fuera del desarrollo, me gusta entrenar, cocinar y salir a explorar nuevas rutas. Siempre busco aprender algo nuevo, ya sea una tecnología, una receta o una canción diferente.</p>
         <div class="knowledge flex flex-column gap-3 mt-5">
           <p>JavaScrip 100%</p>
           <div class="progress_bar progress_javascript">
@@ -132,17 +127,65 @@
     <section id="services" class="services min-h-full pb-7">
       <div class="services_tittle flex flex-column gap-3 text-center">
         <h1 class="text-5xl ">Mis Servicios</h1>
-        <p class="text-gray-400 text-sm md:text-base">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aperiam
-          illum quae labore ab veniam, laudantium asperiores maxime esse, autem nisi natus reprehenderit fugit
-          aspernatur corporis dolorum velit. Magni, eveniet voluptatum.</p>
+        <p class="text-gray-400 text-sm md:text-base">Ofrezco soluciones tecnológicas enfocadas en desarrollo Backend, despliegue en la nube con AWS y construcción de aplicaciones web modernas.
+Trabajo con herramientas robustas y actuales para crear productos funcionales, escalables y bien estructurados.
+<br>
+Aquí algunos de los servicios que puedo ofrecer:
+        </p>
       </div>
-      <div class="services_card w-full grid grid-nogutter mt-7 gap-5">
-        <div class="card flex align-items-center col-12 sm:col-6 lg:col-4">
+      <div class="services_card w-full grid grid-nogutter mt-7 gap-5 ">
+        <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
           <div class="service_logo flex align-items-center justify-content-center">
             <i class="fa-brands fa-aws"></i>
           </div>
           <div class="service_name">
             <p>AWS</p>
+            <span class="service_desc">Despliegue y administración en la nube con EC2, S3, RDS y CloudWatch.</span>
+          </div>
+        </div>
+        <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-brands fa-html5"></i>
+          </div>
+          <div class="service_name">
+            <p>HTML</p>
+            <span class="service_desc">Construcción de interfaces web semánticas y accesibles.</span>
+          </div>
+        </div>
+        <div class="card flex align-items-center col-12 sm:col-6 md:col-3 lg:col gap-3 p-2">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-brands fa-docker"></i>
+          </div>
+          <div class="service_name">
+            <p>DOCKER</p>
+            <span class="service_desc">Contenerización de aplicaciones para entornos portables y consistentes.</span>
+          </div>
+        </div>
+        <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-brands fa-node-js"></i>
+          </div>
+          <div class="service_name">
+            <p>NodeJS</p>
+            <span class="service_desc">Desarrollo de servidores y APIs rápidas con JavaScript.</span>
+          </div>
+        </div>
+        <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-solid fa-database"></i>
+          </div>
+          <div class="service_name">
+            <p>PostgreSQL</p>
+            <span class="service_desc">Gestión de datos robusta y consultas SQL eficientes.</span>
+          </div>
+        </div>
+        <div class="card flex align-items-center col-12 sm:col-6 md:col-3 lg:col gap-3 p-2">
+          <div class="service_logo flex align-items-center justify-content-center">
+            <i class="fa-brands fa-linux"></i>
+          </div>
+          <div class="service_name">
+            <p>LINUX</p>
+            <span class="service_desc">Automatización, scripting y gestión de entornos de servidor.</span>
           </div>
         </div>
       </div>
