--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
       </div>
       <div class="right_content col-9 sm:col-6 xl:col-5">
-        <img src="./asets/foto de perfil.jpg" alt="foto perfil" width="100" height="100">
+        <img src="./asets/foto de Perfil fondo azul.png" alt="foto perfil" width="100" height="100">
       </div>
     </section>
     <!--ABOUT ME-->
