ajustes a la seccion de mi trabajo

--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
       <div class="aboutme_content min-h-full flex flex-column md:flex-row pt-8 md:pt-0"></div>
       <div class="aboutMe_info col-12 md:col-6 md:pr-6 pt-0">
         <h1 class="text-3xl md:text-5xl pb-1">Sobre Mi</h1>
-        <p class="text-gray-500">Soy Erick Noguera, desarrollador especializado en Backend y en formación como AWS Cloud Practitioner. Me apasiona la tecnología, resolver problemas complejos con código y construir soluciones escalables.
-Además de mi formación técnica, cuento con experiencia en ventas, lo que ha fortalecido mis habilidades de comunicación, organización y trabajo en equipo.
+        <p class="text-gray-500">Soy Erick Noguera, un desarrollador backend que vive y respira tecnología. Me formé como Fullstack Developer en Henry Tech LLC, donde tuve el privilegio de trabajar en proyectos reales como la restructuración de la plataforma web de “Sí, Voy”, una iniciativa de turismo inclusivo en Argentina. Esto me permitió sumergirme en el trabajo en equipo, metodologías ágiles y desafíos técnicos complejos.
 <br><br>
-Disfruto trabajar en entornos colaborativos y con metodologías ágiles como Scrum. Manejo tecnologías como Node.js, TypeScript, Express, React, MongoDB, PostgreSQL, Docker y Linux.
-Estudié en Generation Chile, donde participé en proyectos reales como “Sí, Voy”, una iniciativa de viajes inclusivos en Argentina.
+Actualmente, sigo ampliando mis horizontes con Generation Chile, donde estoy en proceso de obtener la certificación como AWS Cloud Practitioner. Tengo un enfoque claro en construir soluciones escalables y eficientes, con una fuerte base en tecnologías como Node.js, TypeScript, Express, React, MongoDB, PostgreSQL, Docker y Linux.
+<br>
+Mi experiencia en ventas me ha dado una ventaja en habilidades interpersonales, organización y trabajo en equipo. Conozco el valor de la buena comunicación y cómo adaptarme rápidamente a nuevas situaciones, lo que me convierte en un miembro versátil y proactivo en cualquier equipo.
 <br><br>
-Fuera del desarrollo, me gusta entrenar, cocinar y salir a explorar nuevas rutas. Siempre busco aprender algo nuevo, ya sea una tecnología, una receta o una canción diferente.</p>
+Siempre estoy buscando el siguiente reto, el próximo aprendizaje y cómo hacer las cosas mejor. Si hay un proyecto desafiante, ahí quiero estar. Siempre dispuesto a aportar, aprender y crecer.</p>
         <div class="knowledge flex flex-column gap-3 mt-5">
           <p>JavaScrip 100%</p>
           <div class="progress_bar progress_javascript">
@@ -192,7 +192,33 @@ Aquí algunos de los servicios que puedo ofrecer:
     </section>
 
     <!--PORTFOLIO-->
-    <section id="portfolio"></section>
+    <section id="portfolio" class="portfolio min-h-full w-full pb-8 pt-8"></section>
+    <div class="portfolio_title flex flex-column gap-3 text-center">
+      <h1 class="text-5xl ">Mi Trabajo</h1>
+        <p class="text-gray-400 text-sm md:text-base">Cada proyecto en el que he participado ha sido una oportunidad para crecer, desafiarme y llevar mis habilidades al siguiente nivel. He trabajado en entornos colaborativos, enfrentado retos técnicos reales y contribuido al desarrollo de soluciones funcionales y con impacto.
+<br>
+Aquí encontrarás una selección de trabajos donde he puesto en práctica mi enfoque backend, el uso de tecnologías modernas y buenas prácticas de desarrollo. Desde la reestructuración completa de plataformas web hasta la implementación de APIs, bases de datos eficientes y despliegues en la nube.
+<br>
+Estos proyectos reflejan lo que más disfruto hacer: convertir ideas en sistemas que funcionen bien, escalen y se mantengan sólidos en el tiempo.
+<br>
+        </p>
+    </div>
+    <div class="portfolio_galery">
+      <div class="galery_categories mb-5 mt-5">
+        <ul class="flex list-none flex-wrap justify-content-center gap-3">
+          <li class="filter-item active" data-filter="all">Todos</li>
+          <li class="filter-item" data-filter="si_voy">Si,voy (Turismo inclusivo)</li>
+          <li class="filter-item" data-filter="e_comerece">E-comerce</li>
+          <li class="filter-item" data-filter="aboutme">Aboutme</li>
+          <li class="filter-item" data-filter="peliculas">Peliculas (Erick Films)</li>
+        </ul>
+      </div>
+      <div class="proyect_galery flex justify-content-center align-items-center flex-wrap gap-3">
+        <div class="proyect_card tours_web">
+          
+        </div>
+      </div>
+    </div>
     <!--FOOTER-->
     <section id="contact"></section>
   </div>
