actualizacion al 25/07 - CV actualizado y nuevos cambios

--- a/index.html
+++ b/index.html
@@ -57,59 +57,68 @@
           Full Stack Web Developer - Practitioner cloud AWS
         </p>
         <div class="home_buttons flex align-items-center gap-2 mt-6">
-          <a href="./asets/Curriculo plano Erick Noguera PDF.pdf" aria-label="Descargar curriculum"
+          <a href="./asets/Curriculo Erick Noguera3.pdf" aria-label="Descargar curriculum"
             class="cursor-pointer border-round-lg" download>Descargar CV</a>
           <button aria-label="Deslizar a seccion portafolio para mostrar mis trabajos"
             class="cursor-pointer border-round-lg">Mi trabajo</button>
         </div>
       </div>
       <div class="right_content col-9 sm:col-6 xl:col-5">
-        <img src="./asets/foto de Perfil fondo azul.png" alt="foto perfil" width="100" height="100">
+        <img src="./asets/Imagen de perfil con traje.png"foto perfil" width="100" height="100">
       </div>
     </section>
     <!--ABOUT ME-->
     <section id="about" class="about_me w-full min-h-screen flex align-items-center">
-      <div class="aboutme_content min-h-full flex flex-column md:flex-row pt-8 md:pt-0"></div>
+      <div class="aboutme_content min-h-full flex flex-column md:flex-row pt-8 md:pt-0">
       <div class="aboutMe_info col-12 md:col-6 md:pr-6 pt-0">
         <h1 class="text-3xl md:text-5xl pb-1">Sobre Mi</h1>
-        <p class="text-gray-500">Soy Erick Noguera, un desarrollador backend que vive y respira tecnología. Me formé como Fullstack Developer en Henry Tech LLC, donde tuve el privilegio de trabajar en proyectos reales como la restructuración de la plataforma web de “Sí, Voy”, una iniciativa de turismo inclusivo en Argentina. Esto me permitió sumergirme en el trabajo en equipo, metodologías ágiles y desafíos técnicos complejos.
-<br><br>
-Actualmente, sigo ampliando mis horizontes con Generation Chile, donde estoy en proceso de obtener la certificación como AWS Cloud Practitioner. Tengo un enfoque claro en construir soluciones escalables y eficientes, con una fuerte base en tecnologías como Node.js, TypeScript, Express, React, MongoDB, PostgreSQL, Docker y Linux.
-<br>
-Mi experiencia en ventas me ha dado una ventaja en habilidades interpersonales, organización y trabajo en equipo. Conozco el valor de la buena comunicación y cómo adaptarme rápidamente a nuevas situaciones, lo que me convierte en un miembro versátil y proactivo en cualquier equipo.
-<br><br>
-Siempre estoy buscando el siguiente reto, el próximo aprendizaje y cómo hacer las cosas mejor. Si hay un proyecto desafiante, ahí quiero estar. Siempre dispuesto a aportar, aprender y crecer.</p>
+        <p class="text-gray-500">Soy Erick Noguera, desarrollador backend con mentalidad full stack que vive y respira
+          tecnología. Me formé en Henry Tech LLC, donde tuve el privilegio de trabajar en proyectos reales como la
+          reestructuración de “Sí, Voy”, una plataforma de turismo inclusivo en Argentina. Allí entendí que el código es
+          solo una parte del impacto: lo importante es cómo trabajamos en equipo para crear soluciones reales.
+          <br><br>
+          Recientemente obtuve mi certificación AWS Cloud Practitioner, luego de una preparación intensiva con
+          Generation Chile, lo que consolidó aún más mi enfoque en soluciones eficientes y escalables en la nube.
+          Trabajo con herramientas como Node.js, TypeScript, Express, React, PostgreSQL, MongoDB, Docker y Linux.
+
+          Además, mi experiencia previa en ventas me dio una ventaja diferencial: escucho, me comunico, organizo y
+          colaboro con fluidez. No solo me adapto rápido a los cambios, también sumo al equipo, "NO" solo hago código.
+          <br><br>
+          Estoy siempre en busca del próximo desafío donde pueda aportar, crecer y aprender. Si tu equipo valora tanto
+          la calidad técnica como la colaboración real, me encantaría ser parte de él.
+        </p>
         <div class="knowledge flex flex-column gap-3 mt-5">
-          <p>JavaScrip 100%</p>
+          <p>JavaScrip </p>
           <div class="progress_bar progress_javascript">
             <span></span>
           </div>
-          <p>Cloud AWS 90%</p>
+          <p>Cloud AWS </p>
           <div class="progress_bar progress_cloudAws">
             <span></span>
           </div>
-          <p>HTML 80%</p>
+          <p>HTML </p>
           <div class="progress_bar progress_html">
             <span></span>
           </div>
-          <p>CSS 80%</p>
+          <p>CSS </p>
           <div class="progress_bar progress_css">
             <span></span>
           </div>
-          <p>Docker 70%</p>
+          <p>Docker </p>
           <div class="progress_bar progress_docker">
             <span></span>
           </div>
         </div>
-        <div class="hireMe_button pt-4">
+        <div class="hireMe_button pt-4 mb-6">
           <a href="mailTo:erick.noguera0410@gmail.com" aria-label="Enviar mensaje al correo"
             class="cursor-pointer no-underline border-round-lg">Contratame</a>
         </div>
       </div>
-      <div class="image col p-0 mt-6 md:mt-0">
+      <div class="image col p-0 mt-6 md:mt-0 mb-4 ">
         <img src="./asets/imagen de programador trabajando.png" alt="Foto relacionada a acerca de mi" width="100"
           height="100">
       </div>
+  </div>
   </div>
   </section>
   </div>
@@ -127,10 +136,12 @@ Siempre estoy buscando el siguiente reto, el próximo aprendizaje y cómo hacer 
     <section id="services" class="services min-h-full pb-7">
       <div class="services_tittle flex flex-column gap-3 text-center">
         <h1 class="text-5xl ">Mis Servicios</h1>
-        <p class="text-gray-400 text-sm md:text-base">Ofrezco soluciones tecnológicas enfocadas en desarrollo Backend, despliegue en la nube con AWS y construcción de aplicaciones web modernas.
-Trabajo con herramientas robustas y actuales para crear productos funcionales, escalables y bien estructurados.
-<br>
-Aquí algunos de los servicios que puedo ofrecer:
+        <p class="text-gray-400 text-sm md:text-base">Ofrezco soluciones tecnológicas enfocadas en desarrollo Backend,
+          despliegue en la nube con AWS y construcción de aplicaciones web modernas.
+          Trabajo con herramientas robustas y actuales para crear productos funcionales, escalables y bien
+          estructurados.
+          <br>
+          Aquí algunos de los servicios que puedo ofrecer:
         </p>
       </div>
       <div class="services_card w-full grid grid-nogutter mt-7 gap-5 ">
@@ -195,13 +206,18 @@ Aquí algunos de los servicios que puedo ofrecer:
     <section id="portfolio" class="portfolio min-h-full w-full pb-8 pt-8"></section>
     <div class="portfolio_title flex flex-column gap-3 text-center">
       <h1 class="text-5xl ">Mi Trabajo</h1>
-        <p class="text-gray-400 text-sm md:text-base">Cada proyecto en el que he participado ha sido una oportunidad para crecer, desafiarme y llevar mis habilidades al siguiente nivel. He trabajado en entornos colaborativos, enfrentado retos técnicos reales y contribuido al desarrollo de soluciones funcionales y con impacto.
-<br>
-Aquí encontrarás una selección de trabajos donde he puesto en práctica mi enfoque backend, el uso de tecnologías modernas y buenas prácticas de desarrollo. Desde la reestructuración completa de plataformas web hasta la implementación de APIs, bases de datos eficientes y despliegues en la nube.
-<br>
-Estos proyectos reflejan lo que más disfruto hacer: convertir ideas en sistemas que funcionen bien, escalen y se mantengan sólidos en el tiempo.
-<br>
-        </p>
+      <p class="text-gray-400 text-sm md:text-base">Cada proyecto en el que he participado ha sido una oportunidad para
+        crecer, desafiarme y llevar mis habilidades al siguiente nivel. He trabajado en entornos colaborativos,
+        enfrentado retos técnicos reales y contribuido al desarrollo de soluciones funcionales y con impacto.
+        <br>
+        Aquí encontrarás una selección de trabajos donde he puesto en práctica mi enfoque backend, el uso de tecnologías
+        modernas y buenas prácticas de desarrollo. Desde la reestructuración completa de plataformas web hasta la
+        implementación de APIs, bases de datos eficientes y despliegues en la nube.
+        <br>
+        Estos proyectos reflejan lo que más disfruto hacer: convertir ideas en sistemas que funcionen bien, escalen y se
+        mantengan sólidos en el tiempo.
+        <br>
+      </p>
     </div>
     <div class="portfolio_galery">
       <div class="galery_categories mb-5 mt-5">
@@ -215,7 +231,7 @@ Estos proyectos reflejan lo que más disfruto hacer: convertir ideas en sistemas
       </div>
       <div class="proyect_galery flex justify-content-center align-items-center flex-wrap gap-3">
         <div class="proyect_card tours_web">
-          
+
         </div>
       </div>
     </div>
