--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
       <div class="aboutme_content min-h-full flex flex-column md:flex-row pt-8 md:pt-0">
       <div class="aboutMe_info col-12 md:col-6 md:pr-6 pt-0">
         <h1 class="text-3xl md:text-5xl pb-1">Sobre Mi</h1>
-        <p class="text-gray-500">Soy Erick Noguera, desarrollador backend con mentalidad full stack que vive y respira
+        <p class="text-gray-250">Soy Erick Noguera, desarrollador backend con mentalidad full stack que vive y respira
           tecnología. Me formé en Henry Tech LLC, donde tuve el privilegio de trabajar en proyectos reales como la
           reestructuración de “Sí, Voy”, una plataforma de turismo inclusivo en Argentina. Allí entendí que el código es
           solo una parte del impacto: lo importante es cómo trabajamos en equipo para crear soluciones reales.
@@ -151,7 +151,7 @@
           </div>
           <div class="service_name">
             <p>AWS</p>
-            <span class="service_desc">Despliegue y administración en la nube con EC2, S3, RDS y CloudWatch.</span>
+            <span class="service_desc">Despliegue y administración en la nube con EC2, S3, cloudformation, RDS y CloudWatch.</span>
           </div>
         </div>
         <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
@@ -178,7 +178,7 @@
           </div>
           <div class="service_name">
             <p>NodeJS</p>
-            <span class="service_desc">Desarrollo de servidores y APIs rápidas con JavaScript.</span>
+            <span class="service_desc">Desarrollo de servidores y APIs rápidas con JavaScript y TypeScript.</span>
           </div>
         </div>
         <div class="card flex align-items-center col-12 sm:col lg:col-4 gap-3 p-2">
@@ -224,8 +224,8 @@
         <ul class="flex list-none flex-wrap justify-content-center gap-3">
           <li class="filter-item active" data-filter="all">Todos</li>
           <li class="filter-item" data-filter="si_voy">Si,voy (Turismo inclusivo)</li>
-          <li class="filter-item" data-filter="e_comerece">E-comerce</li>
-          <li class="filter-item" data-filter="aboutme">Aboutme</li>
+          <li class="filter-item" data-filter="e_comerece">E-comerce (API RESTful)</li>
+          <li class="filter-item" data-filter="aboutme">Aboutme (devops)</li>
           <li class="filter-item" data-filter="peliculas">Peliculas (Erick Films)</li>
         </ul>
       </div>
